crates/carta/tests/snapshots/golden_writer__revealjs__math__braces.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="math inline">\(\overbrace{a+b}\)</span> <span
class="math inline">\(\underbrace{x+y+z}\)</span> <span
class="math inline">\(\overbrace{a+b}^{n}\)</span> <span
class="math inline">\(\underbrace{x+y}_{k}\)</span></p>
</section>
