crates/carta/tests/snapshots/golden_writer__revealjs__math__cancel.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="math inline">\(\cancel{x}\)</span> <span
class="math inline">\(\bcancel{y+z}\)</span> <span
class="math inline">\(\xcancel{abc}\)</span></p>
</section>
