crates/carta/tests/snapshots/golden_writer__revealjs__math__ext-arrows.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="math inline">\(\xrightarrow{f}\)</span> <span
class="math inline">\(\xleftarrow{g}\)</span> <span
class="math inline">\(\xrightarrow[u]{f}\)</span></p>
</section>
