crates/carta/tests/snapshots/golden_writer__revealjs__math__frac-styles.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="math inline">\(\frac{a}{b}\)</span> <span
class="math inline">\(\tfrac{a}{b}\)</span> <span
class="math inline">\(\dfrac{a}{b}\)</span></p>
</section>
