crates/carta/tests/snapshots/golden_writer__revealjs__math__math-display.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="math display">\[\int_0^1 x \, dx\]</span></p>
</section>
