crates/carta/tests/snapshots/golden_writer__revealjs__math__math-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>an equation <span class="math inline">\(a^2 + b^2 = c^2\)</span>
inline</p>
</section>
