crates/carta/tests/snapshots/golden_writer__revealjs__math__modulo.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="math inline">\(a \pmod{n}\)</span> <span
class="math inline">\(a \mod b\)</span> <span class="math inline">\(a
\bmod b\)</span> <span class="math inline">\(a \pod{n}\)</span></p>
</section>
