crates/carta/tests/snapshots/golden_writer__revealjs__math__negation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="math inline">\(\not= b\)</span> <span
class="math inline">\(\not&lt; c\)</span> <span
class="math inline">\(\not\subset B\)</span> <span
class="math inline">\(\not\vdash \phi\)</span> <span
class="math inline">\(\not\rightarrow\)</span> <span
class="math inline">\(\not a\)</span></p>
</section>
