crates/carta/tests/snapshots/golden_writer__revealjs__math__over-under-set.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="math inline">\(\overset{a}{b}\)</span> <span
class="math inline">\(\underset{a}{b}\)</span> <span
class="math inline">\(\stackrel{\text{def}}{=}\)</span></p>
</section>
